<resources>
    <string name="app_name">VowVenue</string>
    <string name="welcome_text">Welcome to Vow Venue!</string>
    <string name="small_welcome_text">Please log in, or register to continue to our booking section</string>
    <string name="loginText">Login</string>
    <string name="registerText">Register</string>
    <string name="pwHint">Password</string>
    <string name="emHint">Email</string>
    <string name="nameHint">Name</string>
    <string name="pwAgainHint">Password again</string>
    <string name="backToLogin">Back to login page</string>
    <string name="venueWelcome">Browse your dream venues here</string>
    <string name="guestLogin">Login as Guest</string>
    <string name="venueName">Name of the venue</string>
    <string name="add_your_venue">Add your venue!</string>
    <string name="venueAddress">Helyszín címe</string>
    <string name="capacityText">Capacity</string>
    <string name="mentesText">Save</string>
    <string name="backText">Back</string>
    <string name="logoutText">Logout</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="queryText">Query1: Gyomaendrődi helyszínek, amelyek befogadóképessége 500 fő feletti – kapacitás szerint csökkenő sorrendben.</string>
    <string name="queryText2">Query2: Gyomaendrődi helyszínek – kapacitás szerint növekvő sorrendben, legfeljebb 3 találat.</string>
    <string name="queryText3">Query3: Olyan helyszínek, amelyek kapacitása kisebb, mint 800 – városnév szerint rendezve.</string>
</resources>