<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddVenue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddVenueActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:text="@string/add_your_venue" />

    <EditText
        android:id="@+id/editTextVenueName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:hint="@string/venueName" />

    <EditText
        android:id="@+id/editTextVenueLocation"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/venueAddress" />

    <EditText
        android:id="@+id/editTextVenueCapacity"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-light"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/capacityText"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonSaveVenue"
        android:fontFamily="sans-serif-light"
        android:layout_marginStart="120dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/mentesText" />

    <Button
        android:id="@+id/buttonBack"
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="120dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/brown"
        android:text="@string/backText" />

</LinearLayout>
